--- a/ShooterSwag/res/layout/activity_duck_hunter_main.xml
+++ b/ShooterSwag/res/layout/activity_duck_hunter_main.xml
@@ -15,14 +15,20 @@
         android:textSize="50sp"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btnNewGame"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:text="@string/sNewGame" />
+        android:layout_paddingBottom="@dimen/activity_vertical_margin"
+        android:layout_paddingLeft="@dimen/activity_horizontal_margin"
+        android:layout_paddingRight="@dimen/activity_horizontal_margin" >
+
+        <Button
+            android:id="@+id/btnNewGame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="@string/sNewGame" />
+    </RelativeLayout>
 
 </RelativeLayout>
