--- a/ShooterSwag/res/layout/activity_duck_hunter_main.xml
+++ b/ShooterSwag/res/layout/activity_duck_hunter_main.xml
@@ -19,14 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_paddingBottom="@dimen/activity_vertical_margin"
-        android:layout_paddingLeft="@dimen/activity_horizontal_margin"
-        android:layout_paddingRight="@dimen/activity_horizontal_margin" >
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin" >
 
         <Button
             android:id="@+id/btnNewGame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:text="@string/sNewGame" />
     </RelativeLayout>
