--- a/ShooterSwag/res/values/colors.xml
+++ b/ShooterSwag/res/values/colors.xml
@@ -1,24 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="maroon">#800000</color>
-    <color name="red">#ff0000</color>
-    <color name="orange">#ffA500</color>
-    <color name="yellow">#ffff00</color>
-    <color name="olive">#808000</color>
-    <color name="purple">#800080</color>
-    <color name="fuchsia">#ff00ff</color>
-    <color name="white">#ffffff</color>
-    <color name="lime">#00ff00</color>
-    <color name="green">#008000</color>
-    <color name="navy">#000080</color>
-    <color name="blue">#0000ff</color>
-    <color name="aqua">#00ffff</color>
-    <color name="teal">#008080</color>
-    <color name="black">#000000</color>
-    <color name="silver">#c0c0c0</color>
-    <color name="gray">#808080</color>
-    <color name="Steel_Blue">#4682B4</color>
-    <color name="Lime">#00FF00</color>
-    <color name="crimson">#CC033C</color>
-    
+
+    <color name="black_overlay">#66000000</color>
+
 </resources>
